# car-rental-app

./: App.tsx  CONTRIBUTORS.md  FirebaseActions.ts  README.md  Types.ts  UI.tsx  babel.config.js  package-lock.json  package.json
android-client/: .gitignore  App.tsx  README.md  package-lock.json  package.json  tsconfig.json
android-client/src/: config.json
android-client/src/components/: BookingHistory.tsx  CarCard.tsx  UI.tsx
android-client/src/context/: UserContext.tsx
android-client/src/screens/carListTabScreens/: carList.tsx  sedanList.tsx
android-client/src/styles/: BookingConfirmation.styles.ts  BookingHistory.styles.ts  CarCard.styles.ts
android-client/src/test/: ChatTest.js  ChatTest.tsx
android-client/src/types/: Types.ts
android-client/src/utils/: Config.ts  FirebaseActions.ts  TimeFormating.ts
android/app/: build.gradle
auth-service/: .gitignore  README.md  pyproject.toml  server.py
carListTabScreens/: carList.tsx  luxuryList.tsx  sedanList.tsx  suvList.tsx
carList_tab/: luxuryList.tsx  sedanList.tsx  suvList.tsx
chat-websocket/: .gitignore  pyproject.toml  test_chat.html
chat-ws/: car_rental.db  chatWebSocket.py
drawerScreens/: DrawerNavigator.tsx  customDrawerComponent.tsx  profileScreen.tsx
src/components/: UI.tsx
src/context/: UserContext.tsx
src/screens/drawerScreens/: DrawerNavigator.tsx  customDrawerComponent.tsx
src/screens/stackScreens/: bookingConfirm.tsx
src/types/: Types.ts
src/utils/: FirebaseActions.ts  TimeFormating.ts
stackScreens/: booking.tsx  bookingConfirm.tsx  carDetail.tsx  homeScreen.tsx
(+21 files in other folders)
