[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Sodiumchloridy",email = "67376832+Sodiumchloridy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"